# first-modus-app

./: .gitignore  Modusfile
client/: Cargo.toml  index.html
client/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
